Fixed alignment of selection item text

--- a/client/app/styles/app.css
+++ b/client/app/styles/app.css
@@ -57,6 +57,7 @@
 }
 .selection-item-text {
     font-size: 13px;
+    text-align: center;
 }
 
 /* Duties Layout */
